native/core/include/gpu/gpu_hot_runtime.h

// Priority Levels
#define PTX_PRIORITY_REALTIME       0
#define PTX_PRIORITY_HIGH           1
#define PTX_PRIORITY_NORMAL         2
#define PTX_PRIORITY_LOW            3
// ============================================================================
// Forward Declarations
// ============================================================================

struct GPUHotRuntime;
typedef struct GPUHotRuntime GPUHotRuntime;
// ============================================================================
// VMM Page Table Entry
// ============================================================================

typedef struct VMMPageEntry {
    void* gpu_addr;             // Current GPU address (may change after swap-in)
    void* original_addr;        // Original address returned to user (for lookup)
    void* host_addr;            // Host backing store (if swapped)
    size_t size;                // Page size
    uint32_t flags;             // Page flags
    uint64_t last_access;       // For LRU eviction
    uint32_t access_count;      // Access frequency
    bool resident;              // In GPU memory
    bool dirty;                 // Modified since last swap
    bool pinned;                // Cannot be evicted
} VMMPageEntry;
// VMM Flags
#define VMM_FLAG_READ       0x01
#define VMM_FLAG_WRITE      0x02
#define VMM_FLAG_EXEC       0x04
#define VMM_FLAG_SHARED     0x08
#define VMM_FLAG_PINNED     0x10
// ============================================================================
// VMM State
// ============================================================================

typedef struct VMMState {
    GPUHotRuntime* runtime;   // Owning runtime for allocations
    VMMPageEntry pages[VMM_MAX_PAGES];
    uint32_t num_pages;
    uint32_t resident_pages;
    uint32_t swapped_pages;

    // Swap regions (host memory backing store)
    void* swap_regions[VMM_MAX_SWAP_REGIONS];
    size_t swap_region_sizes[VMM_MAX_SWAP_REGIONS];
    uint32_t num_swap_regions;
    size_t total_swap_size;
    size_t used_swap_size;

    // Statistics
    uint64_t page_faults;
    uint64_t swap_ins;
    uint64_t swap_outs;
    uint64_t evictions;
} VMMState;
typedef struct VFSInode {
    uint32_t inode_id;
    char name[GPU_HOT_MAX_NAME_LEN];
    char path[VFS_MAX_PATH_LEN];
    VFSNodeType type;

    // Data pointer (GPU memory for tensors)
    void* data;
    size_t size;

    // Tensor metadata (if type == VFS_NODE_TENSOR)
    int dims;
    int shape[8];
    int dtype;  // 0=f32, 1=f16, 2=i32, 3=i8

    // Tree structure
    struct VFSInode* parent;
    struct VFSInode* first_child;
    struct VFSInode* next_sibling;

    // Timestamps
    uint64_t created_at;
    uint64_t modified_at;
    uint64_t accessed_at;

    // Permissions
    uint32_t mode;
    uint32_t uid;
    uint32_t gid;

    bool active;
} VFSInode;
// ============================================================================
// VFS Open File Handle
// ============================================================================

typedef struct VFSFileHandle {
    uint32_t fd;
    VFSInode* inode;
    size_t offset;
    uint32_t flags;
    bool is_open;
} VFSFileHandle;
// VFS Open Flags
#define VFS_O_RDONLY    0x01
#define VFS_O_WRONLY    0x02
#define VFS_O_RDWR      0x03
#define VFS_O_CREAT     0x10
#define VFS_O_TRUNC     0x20
#define VFS_O_APPEND    0x40
// ============================================================================
// VFS State
// ============================================================================

typedef struct VFSState {
    GPUHotRuntime* runtime;   // Owning runtime for allocations
    VFSInode inodes[VFS_MAX_NODES];
    uint32_t num_inodes;
    VFSInode* root;

    VFSFileHandle open_files[VFS_MAX_OPEN_FILES];
    uint32_t num_open_files;
    uint32_t next_fd;

    // Statistics
    uint64_t reads;
    uint64_t writes;
    uint64_t opens;
    uint64_t closes;
} VFSState;
// ============================================================================
// VMM API
// ============================================================================

VMMState* vmm_init(GPUHotRuntime* runtime, size_t swap_size);
void vmm_shutdown(VMMState* vmm);
void* vmm_alloc_page(VMMState* vmm, uint32_t flags);
void vmm_free_page(VMMState* vmm, void* addr);
int vmm_swap_out(VMMState* vmm, void* addr);
int vmm_swap_in(VMMState* vmm, void* addr);
void vmm_pin_page(VMMState* vmm, void* addr);
void vmm_unpin_page(VMMState* vmm, void* addr);
void vmm_get_stats(VMMState* vmm, uint64_t* resident, uint64_t* swapped,
                   uint64_t* faults, uint64_t* evictions);
// ============================================================================
// VFS API
// ============================================================================

VFSState* vfs_init(GPUHotRuntime* runtime);
void vfs_shutdown(VFSState* vfs);
int vfs_mkdir(VFSState* vfs, const char* path, uint32_t mode);
int vfs_rmdir(VFSState* vfs, const char* path);
// File operations
int vfs_open(VFSState* vfs, const char* path, uint32_t flags);
int vfs_close(VFSState* vfs, int fd);
ssize_t vfs_read(VFSState* vfs, int fd, void* buf, size_t count);
ssize_t vfs_write(VFSState* vfs, int fd, const void* buf, size_t count);
int vfs_seek(VFSState* vfs, int fd, size_t offset, int whence);
// Tensor operations
int vfs_create_tensor(VFSState* vfs, const char* path, int* shape, int dims, int dtype);
void* vfs_mmap_tensor(VFSState* vfs, const char* path);
int vfs_sync_tensor(VFSState* vfs, const char* path);
int vfs_stat(VFSState* vfs, const char* path, VFSInode* stat_out);