rust/deps/ptx-os/src/ffi.rs


    pub fn vmm_init(runtime: *mut GPUHotRuntime, swap_size: size_t) -> *mut VMMState;
    pub fn vmm_shutdown(vmm: *mut VMMState);
    pub fn vmm_alloc_page(vmm: *mut VMMState, flags: u32) -> *mut c_void;
    pub fn vmm_free_page(vmm: *mut VMMState, addr: *mut c_void);
    pub fn vmm_swap_out(vmm: *mut VMMState, addr: *mut c_void) -> c_int;
    pub fn vmm_swap_in(vmm: *mut VMMState, addr: *mut c_void) -> c_int;
    pub fn vmm_pin_page(vmm: *mut VMMState, addr: *mut c_void);
    pub fn vmm_unpin_page(vmm: *mut VMMState, addr: *mut c_void);
    pub fn vmm_get_stats(
        vmm: *mut VMMState,
        resident: *mut u64,
        swapped: *mut u64,
        faults: *mut u64,
        evictions: *mut u64,
    );

    // ========================================================================
    // VFS API
    // ========================================================================

    pub fn vfs_init(runtime: *mut GPUHotRuntime) -> *mut VFSState;
    pub fn vfs_shutdown(vfs: *mut VFSState);
    pub fn vfs_mkdir(vfs: *mut VFSState, path: *const c_char, mode: u32) -> c_int;
    pub fn vfs_rmdir(vfs: *mut VFSState, path: *const c_char) -> c_int;
    pub fn vfs_open(vfs: *mut VFSState, path: *const c_char, flags: u32) -> c_int;
    pub fn vfs_close(vfs: *mut VFSState, fd: c_int) -> c_int;
    pub fn vfs_read(vfs: *mut VFSState, fd: c_int, buf: *mut c_void, count: size_t) -> ssize_t;
    pub fn vfs_write(
        vfs: *mut VFSState,
        fd: c_int,
        buf: *const c_void,
        count: size_t,
    ) -> ssize_t;
    pub fn vfs_seek(vfs: *mut VFSState, fd: c_int, offset: size_t, whence: c_int) -> c_int;
    pub fn vfs_create_tensor(
        vfs: *mut VFSState,
        path: *const c_char,
        shape: *const c_int,
        dims: c_int,
        dtype: c_int,
    ) -> c_int;
    pub fn vfs_mmap_tensor(vfs: *mut VFSState, path: *const c_char) -> *mut c_void;
    pub fn vfs_sync_tensor(vfs: *mut VFSState, path: *const c_char) -> c_int;
    pub fn vfs_stat(vfs: *mut VFSState, path: *const c_char, stat_out: *mut VFSInodeStat)
        -> c_int;
}

// Priority constants
pub const PTX_PRIORITY_REALTIME: c_int = 0;
pub const PTX_PRIORITY_HIGH: c_int = 1;
pub const PTX_PRIORITY_NORMAL: c_int = 2;
pub const PTX_PRIORITY_LOW: c_int = 3;

// VMM flags
pub const VMM_FLAG_READ: u32 = 0x01;
pub const VMM_FLAG_WRITE: u32 = 0x02;
pub const VMM_FLAG_EXEC: u32 = 0x04;
pub const VMM_FLAG_SHARED: u32 = 0x08;
pub const VMM_FLAG_PINNED: u32 = 0x10;

// VFS open flags
pub const VFS_O_RDONLY: u32 = 0x01;
pub const VFS_O_WRONLY: u32 = 0x02;
pub const VFS_O_RDWR: u32 = 0x03;
pub const VFS_O_CREAT: u32 = 0x10;
pub const VFS_O_TRUNC: u32 = 0x20;
pub const VFS_O_APPEND: u32 = 0x40;
